--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
 html,
 body,
-#map {
+#map,
+#map2 {
   padding: 0;
   margin: 0;
   height: 100%;
   width: 100%;
   color: black;
 
+}
+
+#map2 {
+  display: none;
 }
 
 #menu {
@@ -111,4 +116,13 @@ body,
   .esri-ui-top-left {
     margin-top: 50px;
     margin-left: 6px;
+  }
+
+  .esri-ui-top-right ol{
+    resize: vertical;
+    border-radius: 8px;
+  }
+
+  .esri-directions__scroller {
+    border-radius: 6px;
   }
